--- a/src/app/abzeichen/wissenstest/wissenstest/wissenstest.html
+++ b/src/app/abzeichen/wissenstest/wissenstest/wissenstest.html
@@ -27,6 +27,6 @@
   <button (click)="zurueck()">Auswahl</button>
 }
 
-@if(erorr){
+@if(error){
   <p [style.color]="'red'">Du musst eine Kategorie auswählen!</p>
 }
